# rust_projet_u

./: Cargo.toml
src/: bender.rs  lib.rs  osc.rs  phasor.rs  sample.rs  wav.rs
