[package]
name = "projet_u"
version = "0.1.0"
edition = "2024"

[lib]
name = "projet_u"
path = "src/lib.rs"

[[bin]]
name = "wav"
path = "src/wav.rs"

[[bin]]
name = "osc"
path = "src/osc.rs"

[[bin]]
name = "phasor"
path = "src/phasor.rs"

[[bin]]
name = "bender"
path = "src/bender.rs"

[dependencies]
gilrs = "0.11.0"
i24 = "2"
jack = "0.13"
